
(library
   (name Tests)
   (public_name reenv-tests.lib)
   (libraries rely.lib reenv.lib )
   (ocamlopt_flags -linkall -g)
   (modules (:standard \ TestReenv))
)
(executable
   (name TestReenv)
   (public_name RunTests.exe)
   (package reenv-tests)
   (libraries reenv-tests.lib)
   (modules TestReenv)
)
